--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,9 +1,10 @@
 .header {
     width: 100%;
+    margin: 30px 0 20px;
+    height: 60px;
     &-content {
-        height: 120px;
         display: flex;
-        align-items: center;
+        align-items: baseline;
         justify-content: space-between;
     }
     &-nav-list {
@@ -11,10 +12,10 @@
         padding: 0;
         list-style-type: none;
         display: flex;
-        align-items: center;
-        justify-content: space-between;
+        align-items: baseline;
+        justify-content: flex-end;
         &-item {
-            margin-right: 10px;
+            margin-left: 10px;
         }
     }
 }
