--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -14,6 +14,11 @@ h4 {
     font-size: 20px;
 }
 
+.serif-accent {
+    font-family: "Crimson Text", serif;
+    font-weight: 600;
+}
+
 body {
     font-family: "Lato", "Helvetica", "Arial", sans-serif;
     font-size: 16px;
