shift data structure

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1,5 +1,5 @@
-$color_main: #f04e30;
-$color_border: #e3e3e3;
-$color_text: #505457;
-$color_light_text: #7f8a8e;
-$color_dark_text: #494d51;
+$color_text: #3A2E3E;
+$color_dark_text: #2F2235;
+
+$background_dark: #A9ACA9;
+$background_light: #F9F9F8;
