--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,5 +1,8 @@
+@import "../node_modules/typeface-cooper-hewitt/index.css";
+
 h1, h2 {
-    font-family: "Quicksand", "Helvetica", "Arial", sans-serif;
+    font-family: "Cooper Hewitt", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
 }
 
 h1 {
@@ -20,7 +23,8 @@ h4 {
 }
 
 body {
-    font-family: "Lato", "Helvetica", "Arial", sans-serif;
+    font-family: "Cooper Hewitt", "Helvetica", "Arial", sans-serif;
+    font-weight: 500;
     font-size: 16px;
     color: $color_text;
 }
