--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -5,6 +5,11 @@ body {
     height: 100%;
 }
 
+h1 {
+    margin-right: 30px;
+    text-transform: uppercase;
+}
+
 .visually-hidden {
     position: absolute;
     overflow: hidden;
