--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1,5 +1,6 @@
 $color_text: #3A2E3E;
 $color_dark_text: #2F2235;
+$color_text_active: #4E2A84;
 
 $background_dark: #A9ACA9;
 $background_light: #F9F9F8;
