--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -17,6 +17,10 @@ h4 {
     font-size: 20px;
 }
 
+a {
+    color: $color_text_active;
+}
+
 .serif-accent {
     font-family: "Crimson Text", serif;
     font-weight: 600;
