--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -10,6 +10,10 @@ h1 {
     text-transform: uppercase;
 }
 
+h2 {
+    text-transform: uppercase;
+}
+
 .visually-hidden {
     position: absolute;
     overflow: hidden;
