--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -15,6 +15,10 @@
         justify-content: flex-end;
         &-item {
             margin-left: 10px;
+
+            i {
+                font-size: 42px;
+            }
         }
     }
 }
