update color palette

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1,6 +1,10 @@
-$color_text: #3A2E3E;
-$color_dark_text: #2F2235;
-$color_text_active: #4E2A84;
+@import "./_palette.scss";
 
-$background_dark: #A9ACA9;
-$background_light: #F9F9F8;
+$color_light_text: $g-5;
+$color_text: $p-2;
+$color_dark_text: $p-4;
+$black: $p-5;
+$color_text_active: $p-3;
+
+$background_dark: $g-3;
+$background_light: white;
