--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,6 +1,9 @@
 .header {
     width: 100%;
     margin: 30px 0 20px;
+    .header-content > * {
+        line-height: 1;
+    }
     &-content {
         display: flex;
         align-items: baseline;
@@ -15,9 +18,14 @@
         justify-content: flex-end;
         &-item {
             margin-left: 10px;
+            a {
+                font-size: 24px;
+            }
 
-            i {
+            i::before {
                 font-size: 42px;
+                margin-right: 0;
+                margin-bottom: .5rem;
             }
         }
     }
