--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1,5 +1,7 @@
 @import "./_palette.scss";
 
+$color_lightest_text: $g-1;
+$color_lighter_text: $g-1;
 $color_light_text: $g-5;
 $color_text: $p-2;
 $color_dark_text: $p-4;
