use lighter background, gatsby link

--- a/sass/_palette.scss
+++ b/sass/_palette.scss
@@ -9,3 +9,9 @@ $g-2: rgba(125,120,133,1);
 $g-3: rgba(139,136,144,1);	// Main Primary color */
 $g-4: rgba(109,102,119,1);
 $g-5: rgba( 96, 87,109,1);
+
+$lg-1: rgba(159,143,182,1);
+$lg-2: rgba(185,174,201,1);
+$lg-3: rgba(218,215,222,1);	// Main Primary color */
+$lg-4: rgba(170,165,177,1);
+$lg-5: rgba(150,144,158,1);
