--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -1,6 +1,6 @@
 @import "./_palette.scss";
 
-$color_lightest_text: $g-1;
+$color_lightest_text: $lg-2;
 $color_lighter_text: $g-1;
 $color_light_text: $g-5;
 $color_text: $p-2;
@@ -8,5 +8,5 @@ $color_dark_text: $p-4;
 $black: $p-5;
 $color_text_active: $p-3;
 
-$background_dark: $g-3;
+$background_dark: $lg-3;
 $background_light: white;
