--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -14,6 +14,10 @@ h2 {
     text-transform: uppercase;
 }
 
+section {
+    padding: 25px 0;
+}
+
 .visually-hidden {
     position: absolute;
     overflow: hidden;
