--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -1,7 +1,10 @@
+@import "../../../sass/settings";
+
 .footer {
     width: 100%;
-    background-color: #333;
+    background-color: $black;
     &-content {
+        color: $color-lightest-text;
         height: 120px;
         display: flex;
         align-items: center;
