--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -25,6 +25,15 @@ h4 {
     font-size: 20px;
 }
 
+small {
+    h1 {
+        font-size: 28px;
+    }
+    h2 {
+        font-size: 20px;
+    }
+}
+
 time {
     font-size: 12px;
 }
