--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -4,10 +4,23 @@
     width: 100%;
     background-color: $black;
     &-content {
-        color: $color-lightest-text;
+        * {
+            color: $color-lightest-text;
+        }
         height: 120px;
         display: flex;
-        align-items: center;
         justify-content: space-between;
+    }
+    .container {
+        padding: 40px 0;
+    }
+
+    .left-align {
+        display: flex;
+        justify-content: flex-end;
+        * {
+            text-align: right;
+            margin-right: 0;
+        }
     }
 }
