add external links in footer

--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -23,4 +23,14 @@
             margin-right: 0;
         }
     }
+
+    ul {
+        padding-left: 0;
+    }
+    li {
+        * {
+            color: $color-light-text !important;
+        }
+        list-style: none;
+    }
 }
