--- a/src/components/project-list/_project-list.scss
+++ b/src/components/project-list/_project-list.scss
@@ -2,4 +2,16 @@
 
 .project-list {
     background-color: $background_light;
+
+    .project {
+        margin-bottom: 20px;
+    }
+
+    .project-heading {
+        display: flex;
+        align-items: baseline;
+        & > * {
+            margin-right: 20px;
+        }
+    }
 }
